# cctakt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TASK.md  cctakt.toml
.cctakt/: plan.json
.claude/: orchestrator.md  settings.local.json
.claude/commands/: orchestrator.md
ref/: cli.md  hooks.md  plugin.md
src/: agent.rs  anthropic.rs  cli.rs  config.rs  debug.rs  dialog.rs  diffview.rs  git_utils.rs  github.rs  issue_picker.rs  lib.rs  lock.rs  main.rs  mcp.rs  merge.rs  plan.rs  statusbar.rs  stream_parser.rs  template.rs  theme.rs  worktree.rs
src/app/: mod.rs  types.rs
src/commands/: init.rs  issues.rs  mcp.rs  mod.rs  run.rs  status.rs  tui.rs
src/tui/: input.rs  mod.rs  render.rs
templates/: orchestrator.md  orchestrator_skill.md
