[package]
name = "cctakt"
version = "0.1.0"
edition = "2024"

[dependencies]
portable-pty = "0.9"
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
vt100 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
