[package]
name = "cctakt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.28"
portable-pty = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
vt100 = "0.15"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
mockall = "0.13"
